tests/baselines/reference/unicodeExtendedEscapesInStrings09_ES6.errors.txt
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings09_ES6.ts(5,12): error TS1125: Hexadecimal digit expected.


==== tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings09_ES6.ts (1 errors) ====
    
    // ES6 Spec - 10.1.1 Static Semantics: UTF16Encoding (cp)
    //  2. If cp ≤ 65535, return cp.
    // (10000 == 65536)
    var x = "\u{10000}";
               
!!! error TS1125: Hexadecimal digit expected.
    